Code/Network Policies/4/NetworkPolicy_8.yaml
# it allows all egress traffic from all pods in a default namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector: {}
  egress:
  - {}
